[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "onex-change-control"
version = "0.1.0"
description = "ONEX Change Control - Canonical governance + schema distribution + enforcement tooling to prevent cross-repo drift"
authors = ["OmniNode Team <team@omninode.ai>"]
license = "MIT"
readme = "README.md"
packages = [{include = "onex_change_control", from = "src"}]

[tool.poetry.scripts]
validate-yaml = "onex_change_control.scripts.validate_yaml:main"
check-schema-purity = "onex_change_control.scripts.check_schema_purity:main"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.11.7"
pyyaml = "^6.0.2"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-cov = "^6.0.0"
mypy = "^1.13.0"
ruff = "^0.14.7"
types-pyyaml = "^6.0.12.20250822"
types-colorama = "^0.4.15"
pre-commit = "^4.3.0"

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
    "**/__pycache__/**",
    "**/site-packages/**",
    "scripts/validation/**",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF", "ANN", "D"]
ignore = [
    "S101",      # Allow assert statements in tests
    "COM812",    # Trailing comma rule conflicts with formatter
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests",
    "slow: Slow-running tests",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
    "--cov-fail-under=80",  # M1: 80% threshold — baseline measured at 85.89% (OMN-4042)
]

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = false  # Fail on missing type stubs for third-party libraries
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = false
warn_required_dynamic_aliases = true
warn_untyped_fields = true
