[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onex-change-control"
version = "0.1.2"
description = "ONEX Change Control - Canonical governance + schema distribution + enforcement tooling to prevent cross-repo drift"
authors = [
    {name = "OmniNode.ai", email = "contact@omninode.ai"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "colorama>=0.4.6",
    "tomli_w>=1.0.0",
]

[project.optional-dependencies]
kafka = [
    "kafka-python>=2.0.5",
]
postgres = [
    "psycopg2-binary>=2.9.9",
]

[project.scripts]
validate-yaml = "onex_change_control.scripts.validate_yaml:main"
check-schema-purity = "onex_change_control.scripts.check_schema_purity:main"
check-db-boundary = "onex_change_control.scripts.check_db_boundary:main"
cosmetic-lint = "onex_change_control.cosmetic.cli:main"
check-no-untyped-metadata = "onex_change_control.scripts.check_no_untyped_metadata:main"
check-hardcoded-topics = "onex_change_control.scripts.check_hardcoded_topics:main"
check-bare-feature-flags = "onex_change_control.scripts.check_bare_feature_flags:main"
validate-day-close = "onex_change_control.scripts.validate_day_close:main"
check-omnidash-health = "onex_change_control.scripts.check_omnidash_health:main"
check-boundary-parity = "onex_change_control.scripts.check_boundary_parity:main"
check-todo-format = "onex_change_control.scripts.check_todo_format:main"
check-migration-conflicts = "onex_change_control.scripts.check_migration_conflicts:main"

[tool.hatch.build.targets.wheel]
packages = ["src/onex_change_control"]

[tool.hatch.build.targets.wheel.force-include]
"src/onex_change_control/cosmetic/spec.yaml" = "onex_change_control/cosmetic/spec.yaml"
"src/onex_change_control/boundaries/kafka_boundaries.yaml" = "onex_change_control/boundaries/kafka_boundaries.yaml"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.13.0",
    "ruff>=0.15.6",
    "types-pyyaml>=6.0.12.20250822",
    "types-colorama>=0.4.15",
    "pre-commit>=4.3.0",
    # Note: omniclaude schema round-trip tests use sys.path injection (OMNI_HOME).
    # They skip gracefully when omniclaude's deps are not installed.
]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
    "**/__pycache__/**",
    "**/site-packages/**",
    "scripts/validation/**",
    "tests/fixtures/**/src/**",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = [
    "S101",      # Allow assert statements in tests
    "COM812",    # Trailing comma rule conflicts with formatter
    "UP042",     # str+Enum pattern is ecosystem standard (ruff 0.15.x new rule; migrate via separate ticket)
]

[tool.ruff.lint.per-file-ignores]
"src/onex_change_control/cosmetic/cli.py" = ["PLC0415"]  # Intentional lazy imports for --select filtering
"src/onex_change_control/__main__.py" = ["T201", "PLC0415"]  # CLI output + lazy import for module-level entry point
"src/onex_change_control/scripts/**" = ["PLC0415", "T201"]  # CLI scripts use print for output; lazy imports for optional deps
"src/onex_change_control/kafka/**" = ["PLC0415", "S110", "PLR0913", "RUF002"]  # Lazy kafka-python import for optional dep; S110/PLR0913/RUF002 intentional
"tests/**" = ["S603", "PLR2004", "PLC0415"]  # subprocess calls, magic values, late imports in tests
"scripts/**" = ["T201", "INP001"]  # CLI scripts use print for output; not a package

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests",
    "slow: Slow-running tests",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
    "--cov-fail-under=75",  # Lowered from 80 to reflect actual baseline after CLI-subprocess test exclusion (OMN-4466)
]

[tool.coverage.run]
# CLI entrypoint scripts are tested via subprocess — exclude from in-process measurement
omit = [
    "src/onex_change_control/scripts/validate_yaml.py",
    "src/onex_change_control/scripts/check_db_boundary.py",
    "src/onex_change_control/scripts/check_omnidash_health.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src:standards:scripts"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "ruamel.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "psycopg2"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = false
warn_required_dynamic_aliases = true
warn_untyped_fields = true
